--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- Arms -->
         <line x1="140" y1="120" x2="120" y2="100" class="figure-part" />
         <line x1="140" y1="120" x2="160" y2="100" class="figure-part" />
-        <!--legs -->
+        <!-- Legs -->
         <line x1="140" y1="150" x2="120" y2="180" class="figure-part" />
         <line x1="140" y1="150" x2="160" y2="180" class="figure-part" />
       </svg>
@@ -41,9 +41,11 @@
     <div class="popup-container" id="popup-container">
       <div class="popup">
         <h2 id="final-message"></h2>
+        <h3 id="final-message-reveal-word"></h3>
         <button id="play-button">Play Again</button>
       </div>
     </div>
+
     <!-- Notification -->
     <div class="notification-container" id="notification-container">
       <p>You have already entered this letter</p>
